welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:23: error: not found: value compt
		while (T(cv) != compt)
                                ^